Display Product Details

--- a/createObjects.html
+++ b/createObjects.html
@@ -24,9 +24,8 @@
 
 	}
 
-	var product = new product(1,"IPhone","Its Awesome",1000);
+	var product = new product(1,"TV","It's a smart TV'",1500);
 	product.displayProductDetails();	
-
 	</script>
 </head>
 
