--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -13,8 +13,8 @@
     <hr>
     <div>
         <h2>Returns a random number between 1-100</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button id="randomNumberButton" onclick="randomNumberGenerator(1,100)">Click Me</button>
+        <p id="randomNumberP">Blah</p>
     </div>
     <hr>
     <div>
@@ -105,7 +105,7 @@
     <div>
         <h2>Returns a random color</h2>
         <button>Click Me</button>
-        <p>Blah</p>
+        <p >Blah</p>
     </div>
     <hr>
     <div>
@@ -114,6 +114,13 @@
         <p>Blah</p>
     </div>
     <hr>
+    <!-- <script>
+        //document.getElementById("randomNumberButton").addEventListener("click",btnClicked() )
+       function btnClicked(){
+       document.getElementById("randomNumberP").innerHTML='Button is clicked'
+       } 
+    </script> -->
+    <script src="code.js"></script>
 </body>
 
 </html>
