Returns a long Lorem Ipsum String

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -29,8 +29,8 @@
     <hr>
     <div>
         <h2>Returns a long Lorem Ipsum String</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button onclick="longLoremIpsumString()">Click Me</button>
+        <p id="longStr">Blah</p>
     </div>
     <hr>
     <div>
