Returns a Lorem Ipsum String based on the number or sentences specified

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -36,9 +36,9 @@
     <div>
         <h2>Returns a Lorem Ipsum String based on the number or sentences specified</h2>
         <label for="rand">Number of sentences</label>
-        <input type="text" name="rand">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand" id="NumOfSentences">
+        <button onclick="longLoremIpsumString()">Click Me</button>
+        <p id="longStr2">Blah</p>
     </div>
     <hr>
     <div>
