Returns a Lorem Ipsum String based on the number of characters specified

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -42,11 +42,11 @@
     </div>
     <hr>
     <div>
-        <h2>Returns a Lorem Ipsum String based on the number or characters specified</h2>
+        <h2>Returns a Lorem Ipsum String based on the number of characters specified</h2>
         <label for="rand">Random Number Generator</label>
-        <input type="text" name="rand">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand" id="numOfChars">
+        <button onclick="loremBasedOnChars()">Click Me</button>
+        <p id="longStr3">Blah</p>
     </div>
     <hr>
     <div>
