Return the current date

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -51,8 +51,8 @@
     <hr>
     <div>
         <h2>Returns the current date(formatted)</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button onclick="displayCurrentDate()">Click Me</button>
+        <p id="currentDate">Blah</p>
     </div>
     <hr>
     <div>
