Return the Current Time

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -57,8 +57,8 @@
     <hr>
     <div>
         <h2>Returns the current time(formatted)</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button onclick="displayCurrentTime()">Click Me</button>
+        <p  id="currentTime">Blah</p>
     </div>
     <hr>
     <div>
