Convert Inches to Feet and Feet to Inches

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -64,17 +64,17 @@
     <div>
         <h2>Converts Inches to Feet</h2>
         <label for="rand">Number of inches</label>
-        <input type="text" name="rand">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand" id="inches">
+        <button onclick="convertInchesToFeet()">Click Me</button>
+        <p id="inchesToFeet"  >Blah</p>
     </div>
     <hr>
     <div>
         <h2>Converts Feet to Inches</h2>
         <label for="rand">Number of inches</label>
-        <input type="text" name="rand">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand"  id="feet">
+        <button onclick="convertFeetToInches()">Click Me</button>
+        <p id="feetToInches">Blah</p>
     </div>
     <hr>
     <div>
