compare Length and return Random password

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -80,17 +80,17 @@
     <div>
         <h2>Compares if two words are the same length</h2>
         <label for="rand">First Word</label>
-        <input type="text" name="rand1">
+        <input type="text" name="rand1" id="first">
         <label for="rand">Second Word</label>
-        <input type="text" name="rand2">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand2" id="second">
+        <button onclick="compareLength()">Click Me</button>
+        <p id="areTheSameLength">Blah</p>
     </div>
     <hr>
     <div>
         <h2>Returns a random password</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button onclick="returnRandomPassword()">Click Me</button>
+        <p id="randomPassword">Blah</p>
     </div>
     <hr>
     <div>
