is the number even or odd

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -97,9 +97,9 @@
         <!-- Challenge. See if you can use the % symbol. Google "javascript modulo". -->
         <h2>Tells you if the number is even or odd</h2>
         <label for="rand">Number</label>
-        <input type="text" name="rand">
-        <button>Click Me</button>
-        <p>Blah</p>
+        <input type="text" name="rand" id ="number">
+        <button onclick="isEvenOrOdd()">Click Me</button>
+        <p id="evenOrOdd">Blah</p>
     </div>
     <hr>
     <div>
