Return a Random Color

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -104,8 +104,8 @@
     <hr>
     <div>
         <h2>Returns a random color</h2>
-        <button>Click Me</button>
-        <p >Blah</p>
+        <button onclick="returnRandomColor()">Click Me</button>
+        <p id="color" >Blah</p>
     </div>
     <hr>
     <div>
