Return a Random Object

--- a/UtilityPage/index.html
+++ b/UtilityPage/index.html
@@ -110,8 +110,8 @@
     <hr>
     <div>
         <h2>Returns a random first and last name</h2>
-        <button>Click Me</button>
-        <p>Blah</p>
+        <button onclick="returnsRandomObject()">Click Me</button>
+        <p id="object">Blah</p>
     </div>
     <hr>
     <script src="code.js"></script>
